# Garden_Defender

./: CMakeLists.txt  Doxyfile  Doxyfile.bak  GardenDefender.py  LICENSE  README.md  control.cpp  controlbutton.cpp  index.html  main.cpp  object_detection.txt  servo_test.py  yolov5n__.onnx
.github/workflows/: main.yml
Mechanical Design/: Blaster.SLDPRT  Button.SLDPRT  Camera.SLDPRT  Cover.SLDPRT
Mechanical Design/SOLIDWORKS/: Ball Bearing 5972K246.SLDPRT  Camera.SLDPRT  Flat Head Screw M3 x 10mm 91294A130.SLDPRT  Flat Head Screw M3 x 20mm 91294A136.SLDPRT  Flat Head Screw M4 x 12mm 91294A192.SLDPRT  Flat Head Screw M5 x 16mm 91294A212.SLDPRT  Foot.SLDPRT  Heat Insert for Plastic_94180A331.SLDPRT  Heat Insert for Plastic_M4_94459A150.SLDPRT  Link.SLDPRT  Neopixel Ring 12x.SLDPRT  Phillips Thread-Forming Screw M2 x 10mm 99461A917.SLDPRT  Phillips Thread-Forming Screw M2 x 4mm 90380A324.SLDPRT  Switch.SLDPRT
Mechanical Design/STEP Files/: 2PH63091A Board_Varsayılan.STEP  4 Headers_Varsayılan.STEP  Ball Bearing 5972K246_5972K246.STEP  Blaster_Predeterminado.STEP  Blaster_Predeterminado_asm.STEP  Button_Predeterminado.STEP  Camera_Predeterminado.STEP  Clamp Body_Varsayılan.STEP  Copy of 3296W v3^DC-DC XL6009_Predeterminado.STEP  Copy of Board_XL6009 v1^DC-DC XL6009_Predeterminado.STEP  Copy of CAPAE-D8.0x10.2 v1^DC-DC XL6009_Predeterminado.STEP  Copy of Diode SMA v1^DC-DC XL6009_Predeterminado.STEP  Copy of STEP-WE-PD-1280-rev1 v2^DC-DC XL6009_Predeterminado.STEP  Cover_Predeterminado.STEP  (+26 more)
Objects/: Camera.cpp  Camera.h  Detector.cpp  Detector.h  Face.h  GUI.cpp  GUI.h  Object.cpp  Object.h  Servos.cpp  Servos.h  Turret.cpp  Turret.h  ws2812-rpi-defines.h
Presentations ./: Project proposal (speech).docx  README.md
WebDesign/: control.out  up_control.cpp  video.html  video_control.cpp  video_out.out
YoloTraining/: README.nd  Untitled-1.ipynb  requirements.txt  train.py  training_pipeline.ipynb
html/: Camera_8cpp.html  Camera_8cpp__incl.dot  Camera_8h.html  Camera_8h__incl.dot  Camera_8h_source.html  Detector_8cpp.html  Detector_8cpp__incl.dot  Detector_8h.html  Detector_8h__dep__incl.dot  Detector_8h__incl.dot  Detector_8h_source.html  GUI_8h.html  GUI_8h__incl.dot  GUI_8h_source.html  Object_8h_source.html  Servos_8h.html  Servos_8h__dep__incl.dot  Servos_8h__incl.dot  Servos_8h_source.html  Turret_8h.html  Turret_8h.js  Turret_8h__dep__incl.dot  Turret_8h__incl.dot  Turret_8h_source.html  annotated.html  annotated_dup.js  classCallback__Detector-members.html  classCallback__Detector.html  classCallback__Detector.js  classCallback__Detector__coll__graph.dot  classCallback__Detector__inherit__graph.dot  classCallback__GUI-members.html  classCallback__GUI.html  classCallback__GUI.js  classCallback__GUI__coll__graph.dot  classCallback__GUI__inherit__graph.dot  classCamera-members.html  classCamera.html  classCamera.js  classDetector-members.html  (+49 more)
latex/: Camera_8cpp.tex  Camera_8cpp.tex.tmp  Camera_8cpp__incl.dot  Camera_8h.tex  Camera_8h.tex.tmp  Camera_8h__incl.dot  Detector_8cpp.tex  Detector_8cpp__incl.dot  Detector_8h.tex  Detector_8h__dep__incl.dot  Detector_8h__incl.dot  GUI_8h.tex  GUI_8h__incl.dot  Servos_8h.tex  Servos_8h__dep__incl.dot  Servos_8h__incl.dot  Turret_8h.tex  Turret_8h__dep__incl.dot  Turret_8h__incl.dot  annotated.tex  classCallback__Detector.tex  classCallback__Detector__coll__graph.dot  classCallback__Detector__inherit__graph.dot  classCallback__GUI.tex  classCallback__GUI__coll__graph.dot  classCallback__GUI__inherit__graph.dot  classCamera.tex  classDetector.tex  classGUI.tex  classObject.tex  classServos.tex  classTurret.tex  classTurret__coll__graph.dot  files.tex  hierarchy.tex  index.tex  md_README.tex  refman.tex  structDetector_1_1Callback__Detector.tex  structDetector_1_1Callback__Detector__inherit__graph.dot  (+2 more)
nginx/: c.conf
test/: TestDetector.cpp  TestMain.cpp  TestServos.cpp  TestTurret.cpp
(+62 files in other folders)
